tests/samples/positive/pointers/pointer_ops.ax
module pointer_ops;

fn increment(value: *mut i32) -> void {
    unsafe {
        *value = *value + 1;
    }
}

fn main() -> i32 {
    var value: i32 = 41;
    increment(&value);
    return value - 42;
}
